fixing spacing

--- a/styles.css
+++ b/styles.css
@@ -4,9 +4,14 @@ body {
     padding: 0;
 }
 
-main {
-    border-top: 2px solid #000;
+header {
     border-bottom: 2px solid #000;
+}
+
+main {}
+
+footer {
+    border-top: 2px solid #000;
 }
 
 #logo {
@@ -15,6 +20,6 @@ main {
 }
 
 .strip {
-    width: auto;
+    margin: auto;
     max-width: 400px;
 }
